# court-message-evidence-map

./: README.md  company_profile.json  pyproject.toml
fixtures/: cases.jsonl  policy.json
outputs/: analysis.json  architecture.json  benchmark.json  dashboard.html  decision_report.md  domain_rubric.json  evidence_packet.md  failure_matrix.md  operator_brief.md  scenario_report.csv  strategy_model.json  trace_graph.mmd
src/court_message_evidence_map/: domain.py  strategy.py
src/court_message_evidence_map.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_workflow.py
